src/objects/BT_CO_CMIS_POP_ImportPublicHolidayInfo__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>holidayDate__c</fullName>
        <label>holidayDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>holidayDescription__c</fullName>
        <label>holidayDescription</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMIS_POP_ImportPublicHolidayInfo</label>
    <nameField>
        <label>BT_CO_CMIS_POP_ImportPublicationIssue Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMIS_POP_ImportPublicHolidayInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>